kubernetes/minikube/p2p-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: p2p
  name: p2p
spec:
  ports:
  - port: 3000
    protocol: TCP
    targetPort: 3000
  selector:
    app: p2p
  type: NodePort
status:
