kubernetes/minikube/p2p-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: p2p-ingress
spec:
  rules:
  - host: __DOMAIN_NAME__
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: p2p
            port:
              number: 3000
  ingressClassName: nginx
